--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
-telegram_bot
-telegram_time_bot
+.vscode/
+__pycache__/
+.pytest_cache
 start
+test.py
 *.csv
 *.xlsx
-.vscode/
 *.json
-__pycache__/
 *.clue
 test_comments.txt
 Tests
